<resources>
    <string name="app_name">Wordryo</string>
    <string name="app_name_caps">WORDRYO</string>
    <string name="me_vs_android">Me vs. Android</string>
    <string name="pass_and_play">Pass &amp; Play</string>
    <string name="start_new_game">Start new game?</string>
    <string name="android_name">Android</string>
    <string name="me_name">Me</string>
    <string name="commit">Commit</string>
    <string name="zoom_plus">Zoom in/out</string>
    <string name="go_back">Undo</string>
    <string name="return_tiles">Return tiles</string>
    <string name="delete_game">Delete game</string>
    <string name="give_hint">Hint</string>
    <string name="preferences">Preferences</string>
    <string name="androidplaylevel">Android play level</string>
    <string name="pandp_settings">Pass &amp; Play settings</string>
    <string name="pandp_numplayers">Number of players</string>
    <string name="general_settings">General settings</string>
    <string name="warn_unknown">Unknown words</string>
    <string name="not_in_dictionary">Give a warning if a word isn\'t in the built-in dictionary</string>
    <string name="android_no_move">Android can\'t find a move; pass</string>
    <string name="android_exchanged_tiles">Android exchanged tiles</string>
    <string name="no_hint_available">No hint available</string>
    <string name="str_must_start_on_star">Start on the star. (It\'s a double word score.)</string>
    <string name="str_tiles_must_contact">New pieces must contact
         others already in place.</string>
    <string name="zoom_on_drop">Zoom start</string>
    <string name="zoom_summary">Zoom in when starting a new word</string>
    <string name="board_submenu_game">Game info</string>
    <string name="empty_games_list">Use the button below to create a
      game. Tap an existing game to play it or long-tap it for other
      options.</string>
    <string name="empty_games_list2">You can hide this and the buttons
      below in the Appearance section of Settings (accessed via your
      device\'s menu key.)</string>
    <string name="button_new_game">Add game</string>
    <string name="button_new_group">Add group</string>
    <string name="empty_list_msg">Use the menu key to add a
      game.</string>
    <string name="str_game_namef">%1$s (%2$s)</string>
    <string name="robot_namef">%s (robot)</string>
    <string name="missing_player">(not here yet...)</string>
    <string name="summary_relay_conff">Configured for room
      \"%s\"</string>
    <string name="summary_relay_waitf">Waiting for players in room
      \"%s\"</string>
    <string name="summary_relay_connf">Game in play in room \"%s\"</string>
    <string name="summary_relay_gameoverf">Game over in room \"%s\"</string>
    <string name="gameOver">Game over</string>
    <string name="movesf">%d moves played</string>
    <string name="button_delete">Delete</string>
    <string name="button_reset">Reset</string>
    <string name="gamel_menu_dicts">Wordlists</string>
    <string name="menu_prefs">Settings</string>
    <string name="gamel_menu_checkmoves">Check for moves</string>
    <string name="msgs_progress">Checking relay for moves
      etc...</string>
    <string name="no_games_to_refresh">No games found that connect via
      the relay.</string>
    <string name="gamel_menu_delete_all">Delete all</string>
    <string name="board_menu_file_about">About</string>
    <string name="game_item_menu_titlef">\"%s\" actions:</string>
    <string name="list_item_config">Game settings...</string>
    <string name="list_item_rename">Rename...</string>
    <string name="list_item_move">Move to group...</string>
    <string name="list_item_delete">Delete</string>
    <string name="list_item_reset">Reset</string>
    <string name="list_item_new_from">New from</string>
    <string name="list_item_copy">Copy</string>
    <string name="no_copy_network">Games that have already connected
      to the relay cannot be copied. Use \"New from\" for a
      ready-to-play copy with all the same settings.</string>
    <string name="game_rename_title">Rename game</string>
    <string name="rename_label">Change the name of this game to:</string>
    <string name="confirm_delete">Are you sure you want to delete this
      game?</string>
    <string name="confirm_reset">Are you sure you want to reset this
      game? Resetting erases all moves and any connection
      information.</string>
    <string name="title_dicts_list">Installed Crosswords Wordlists</string>
    <string name="download_dicts">Download more...</string>
    <string name="loc_builtin">Built-in</string>
    <string name="loc_downloads">Downloads</string>
    <string name="no_download_warning">Unable to download. Do you have
      a web browser installed?</string>
    <string name="dicts_item_move">Change storage location</string>
    <string name="dicts_item_select">Make default</string>
    <string name="confirm_delete_dictf">Are you sure you want to
    delete %s?</string>
    <string name="confirm_deleteonly_dictf">\u0020It is the only %s
      wordlist installed. One or more games will be unopenable
      without it.</string>
    <string name="confirm_deletemore_dictf">\u0020One game (at least)
      is using it, but there is another %s wordlist installed that can
      replace it.</string>
    <string name="set_default_messagef">For what players should this
      wordlist be the default for new games? (The language %s will be
      the default for both.)</string>
    <string name="button_default_human">Human</string>
    <string name="button_default_robot">Robot</string>
    <string name="button_default_both">Both</string>
    <string name="move_dictf">Location for wordlist %1$s</string>
    <string name="loc_internal">Internal</string>
    <string name="loc_external">External</string>
    <string name="title_game_configf">%s settings</string>
    <string name="title_gamenet_configf">%s settings (networked)</string>
    <string name="title_gamebt_configf">%s settings (via Bluetooth)</string>
    <string name="title_langs_list">Languages (based on installed
      wordlists)</string>
    <string name="game_locked">Lock settings</string>
    <string name="players_label_standalone">Players</string>
    <string name="players_label_host">Players (%1$d local, %2$d
      off-device)</string>
    <string name="button_add_player">Add player</string>
    <string name="button_juggle_players">Shuffle players</string>
    <string name="lang_label">Game language</string>
    <string name="langdict_label">Game language/wordlist</string>
    <string name="connect_label_relay">Connection (via internet)</string>
    <string name="join_room">Join public room</string>
    <string name="new_room_hint">Room name</string>
    <string name="room_public">Make new room public</string>
    <string name="room_public_prompt">Select public room</string>
    <string name="public_names_progress">Fetching public rooms for
      %1$d-player games in %2$s.</string>
    <string name="no_name_found_f">No public rooms found for
      %1$d-player games in %2$s. Try refreshing or creating your
      own.</string>
    <string name="settings_label">Other settings</string>
    <string name="hints_allowed">Allow hints</string>
    <string name="nethints_allowed">Allow hints (networked)</string>
    <string name="use_timer">Enable game timer</string>
    <string name="minutes_label">Minutes per player</string>
    <string name="robot_spinner_prompt">How smart is the robot player?</string>
    <string name="robot_smart">Smart robot</string>
    <string name="robot_smarter">Smarter robot</string>
    <string name="robot_smartest">Smartest robot</string>
    <string name="phonies_spinner_prompt">How to handle \"phonies\"
        (words not in wordlist)</string>
    <string name="phonies_ignore">Ignore phonies</string>
    <string name="phonies_warn">Warn if phonies</string>
    <string name="phonies_disallow">Disallow phonies</string>
    <string name="str_reg_server_sans_remote">At least one player must
         be marked \"Remote\" for a game started as Host.</string>
    <string name="guest_name">(Off-device player)</string>
    <string name="confirm_save">This game is in play.  If you
      save these changes it must be restarted.  Do you want to save
      these changes?</string>
    <string name="confirm_save_title">Confirm save</string>
    <string name="play">Play game</string>
    <string name="force_title">Off-device player[s]</string>
    <string name="force_expl">In a multi-device game there must be at
    least one player from and another not from this device.  Please
    check off-device players.</string>
    <string name="forced_consistent">Modified first player.</string>
    <string name="player_edit_title">Edit player</string>
    <string name="remote_label">Off-device player</string>
    <string name="player_label">Name:</string>
    <string name="dict_lang_labelf">Wordlist (in %s)</string>
    <string name="dicts_list_promptf">Installed wordlists (in %s)</string>
    <string name="robot_label">Robot player</string>
    <string name="password_label">Password</string>
    <string name="button_trade_commit">Commit exchange</string>
    <string name="button_trade_cancel">Cancel exchange</string>
    <string name="entering_trade">Tap tiles to select...</string>
    <string name="bonus_l2x_summary">2L</string>
    <string name="bonus_w2x_summary">2W</string>
    <string name="bonus_l3x_summary">3L</string>
    <string name="bonus_w3x_summary">3W</string>
    <string name="no_moves_made">(No moves yet)</string>
    <string name="invite_msgf">This game is missing %1$d remote
      player[s].  Would you like to invite someone to join -- assuming
      you haven\'t already?</string>
      <string name="players_missf">%d player[s] missing</string>
    <string name="invite_multiple">\u0020(You are expecting multiple
      remote players.  Be sure to address your invitation to
      that many people.)</string>
    <string name="pts">pts</string>
    <string name="msg_relay_waiting">Device %1$d connected to relay in
      room \"%2$s\". Waiting for %3$d player[s].</string>
    <string name="msg_relay_all_heref">All players are here in room
      \"%s\".</string>
    <string name="relay_alert">Connection problem</string>
    <string name="msg_too_many">You are providing more players than
         the host expects.</string>
    <string name="msg_no_room">No host has registered a room by that name.</string>
    <string name="msg_dup_room">Another host has already registered a
         room using that name.  Rename yours or retry later.</string>
    <string name="msg_lost_other">The relay has lost contact with
         another device in this game.</string>
    <string name="msg_dev_deleted">This game has been deleted on
      another device. You will not be able to play any
      further.</string>
    <string name="ids_badwords">Word[s] %1$s not found in
         wordlist %2$s.</string>
    <string name="badwords_accept">\u0020Do you still want to accept
    this move?</string>
    <string name="badwords_lost">  Turn lost.</string>
    <string name="badwords_title">Illegal word[s]</string>
    <string name="board_menu_done">Turn done</string>
    <string name="board_menu_trade">Exchange tiles</string>
    <string name="board_menu_tray_hide">Hide rack</string>
    <string name="board_menu_tray_show">Show rack</string>
    <string name="board_menu_undo_last">Undo last</string>
    <string name="board_menu_game_counts">Counts and values</string>
    <string name="board_menu_game_left">Tiles remaining</string>
    <string name="board_menu_game_history">Game history</string>
    <string name="board_menu_game_final">Final scores</string>
    <string name="board_menu_game_resign">Resign</string>
    <string name="board_menu_game_resend">Resend messages</string>
    <string name="str_robot_moved">The robot made this move:\u0020</string>
</resources>