<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
 
    <!-- 
    <TextView
	    android:text="@string/androidplaylevel"
	    android:textColor="#FFFFFFFF"
	    android:textSize="18sp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dip"
	    android:layout_marginLeft="6dip"
	    android:layout_marginBottom="10dip"
	    android:gravity="left">
	</TextView>
     -->
     
    <RadioButton android:id="@+id/radio_robot_smart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:textSize="18sp"
        android:layout_marginLeft="12dip"
        android:layout_marginTop="6dip"
        android:layout_marginBottom="6dip"
        android:text="@string/robot_smart" />
    <RadioButton android:id="@+id/radio_robot_smarter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:textSize="18sp"
        android:layout_marginLeft="12dip"
        android:layout_marginBottom="6dip"
        android:text="@string/robot_smarter" />
    <RadioButton android:id="@+id/radio_robot_smartest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:textSize="18sp"
        android:layout_marginLeft="12dip"
        android:layout_marginBottom="12dip"
        android:text="@string/robot_smartest" />
</RadioGroup>