<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		  android:background="@color/gamelistbkgnd"
              android:orientation="vertical"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" >
    <ImageView
		android:layout_weight="4"
	    android:layout_width="match_parent"
	    android:layout_height="0dip" >
	</ImageView>

    
	<LinearLayout
        android:visibility="visible"
		android:id="@+id/singleplayer"
		android:focusable="true"
	    android:orientation="horizontal"
	    android:gravity="center"
	    android:layout_marginTop="0dip"
	    android:layout_marginBottom="0dip"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<ImageView
			android:src="@drawable/person"
			android:tint="#FFFFFFFF"
			android:layout_marginRight="-8dip"
			android:layout_width="110dip"
			android:layout_height="110dip" />
		<ImageView
			android:src="@drawable/android"
			android:tint="#FFFFFFFF"
			android:layout_marginLeft="-10dip"
			android:layout_marginTop="5dip"
			android:layout_width="98dip"
			android:layout_height="98dip" />			    	    	    
	</LinearLayout>

	<TextView
	    android:id="@+id/mevsandroid"
	    android:text="@string/me_vs_android"
	    android:textColor="#FFFFFFFF"
	    android:textSize="22sp"
	    android:layout_width="match_parent"
	    android:layout_height="50dip"
	    android:layout_marginStart="18dp"
	    android:gravity="center">
	</TextView>
	
	<ImageView
		android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="0dip" >
	</ImageView>
		            	
	<LinearLayout
        android:visibility="visible"
		android:id="@+id/twoplusplayer"
		android:focusable="true"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal"
	    android:layout_marginTop="20dip"
	    android:layout_marginBottom="0dip"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<ImageView
			android:src="@drawable/ubuntu"
			android:tint="#FFFFFFFF"
			android:layout_width="112dip"
			android:layout_height="116dip" />					    	    	    
	</LinearLayout>
		
	<TextView
	    android:id="@+id/passandplay"
	    android:text="@string/pass_and_play"
	    android:textColor="#FFFFFFFF"
	    android:textSize="22sp"
	    android:layout_width="match_parent"
	    android:layout_height="50dip"
		android:layout_marginStart="18dp"
	    android:gravity="center">
	</TextView>

	<TextView
	    android:visibility="gone"
	    android:id="@+id/passandplayinfo"
	    android:textColor="#FFFFFFFF"
	    android:textSize="14sp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:layout_marginStart="18dp"
	    android:gravity="center">
	</TextView>

	<ImageView
		android:layout_weight="4"
	    android:layout_width="match_parent"
	    android:layout_height="0dip" >
	</ImageView>
    
  <!-- These are all "gone".-->    
  <LinearLayout android:id="@+id/empty_games_list"
      		    android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                > 
    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/empty_games_list"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:background="#FF202020"
              android:gravity="center"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"
              />
    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/empty_games_list2"
              android:background="#FF202020"
              android:gravity="center"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"
              />
  </LinearLayout>

  <ExpandableListView android:id="@id/android:list"
      				  android:visibility="gone"
                      android:layout_width="fill_parent" 
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:drawSelectorOnTop="false"
                      />
  <TextView android:id="@+id/empty_list_msg"
      		android:visibility="gone"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/empty_list_msg" 
            />

  <LinearLayout android:id="@+id/new_buttons"
      			android:visibility="gone"
      			android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                >
    <Button android:id="@+id/new_game"
            android:text="@string/button_new_game" 
            style="@style/spaced_buttons"
            />
    <Button android:id="@+id/new_group"
            android:text="@string/button_new_group" 
            style="@style/spaced_buttons"
            />
  </LinearLayout>

</LinearLayout>
